[gd_scene load_steps=13 format=2]

[ext_resource path="res://Portal.gd" type="Script" id=1]
[ext_resource path="res://objects/Portal/Purple Portal Sprite Sheet.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.3597
height = 83.8274

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Portal" type="Area2D" groups=[
"portal",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.2079, 14.1082 )
shape = SubResource( 1 )

[node name="Purple Portal Sprite Sheet" type="AnimatedSprite" parent="CollisionShape2D"]
modulate = Color( 1.1, 1.1, 1.1, 1 )
position = Vector2( 1.2079, -14.1082 )
scale = Vector2( 3, 3 )
frames = SubResource( 10 )
frame = 1
playing = true

[node name="TimerCD" type="Timer" parent="."]
wait_time = 0.5
[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
[connection signal="timeout" from="TimerCD" to="." method="_on_TimerCD_timeout"]
